--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY = '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'
-SERPER_API_KEY = '4fd917623c79a57ebc611bb423ce6019b61c523e'
+OPENAI_API_KEY = ''
+SERPER_API_KEY = ''
