--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-streamlit
-openai
-sqlite3
-pandas
+langchain==0.0.336
+llama_index==0.9.1
+openai==0.28.1
+pandas==2.1.3
+python-dotenv==1.0.0
+qdrant_client==1.6.9
+streamlit==1.27.2
+streamlit_chat==0.1.1
