--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,115 @@
-langchain==0.0.336
-llama_index==0.9.1
-openai==0.28.1
-pandas==2.1.3
+aiohttp==3.8.6
+aiosignal==1.3.1
+aiostream==0.5.2
+altair==5.1.2
+annotated-types==0.6.0
+anyio==3.7.1
+async-timeout==4.0.3
+attrs==23.1.0
+blinker==1.6.3
+cachetools==5.3.2
+certifi==2023.7.22
+charset-normalizer==3.3.1
+click==8.1.7
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.12.1
+dataclasses-json==0.5.14
+Deprecated==1.2.14
+docopt==0.6.2
+exceptiongroup==1.1.3
+filelock==3.13.0
+fonttools==4.43.1
+frozenlist==1.4.0
+fsspec==2023.10.0
+gitdb==4.0.11
+GitPython==3.1.40
+greenlet==3.0.1
+grpcio==1.59.0
+grpcio-tools==1.59.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==0.18.0
+httpx==0.25.0
+huggingface-hub==0.17.3
+hyperframe==6.0.1
+idna==3.4
+importlib-metadata==6.8.0
+Jinja2==3.1.2
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+kiwisolver==1.4.5
+langchain==0.0.325
+langsmith==0.0.53
+llama-index==0.8.53.post3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.8.0
+mdurl==0.1.2
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+nltk==3.8.1
+numpy==1.26.1
+openai
+packaging==23.2
+pandas==2.1.1
+Pillow==10.1.0
+pipreq==0.4
+pipreqs==0.4.13
+portalocker==2.8.2
+protobuf==4.24.4
+pyarrow==13.0.0
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydeck==0.8.1b0
+Pygments==2.16.1
+pyparsing==3.1.1
+pypdf==3.16.4
+python-dateutil==2.8.2
 python-dotenv==1.0.0
-qdrant_client==1.6.9
+pytz==2023.3.post1
+pywin32==306
+PyYAML==6.0.1
+qdrant-client==1.6.4
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+rich==13.6.0
+rpds-py==0.10.6
+safetensors==0.4.0
+scikit-learn==1.3.2
+scipy==1.11.3
+seaborn==0.13.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+SQLAlchemy==2.0.22
 streamlit==1.27.2
-streamlit_chat==0.1.1
+streamlit-chat==0.1.1
+tenacity==8.2.3
+threadpoolctl==3.2.0
+tiktoken==0.5.1
+tokenizers==0.14.1
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.3
+tqdm==4.66.1
+transformers==4.34.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==5.2
+urllib3==1.26.18
+utils==1.0.1
+validators==0.22.0
+watchdog==3.0.0
+wrapt==1.15.0
+yarg==0.1.9
+yarl==1.9.2
+zipp==3.17.0
