--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 nltk==3.8.1
 numpy==1.26.1
-openai
+openai==0.28
 packaging==23.2
 pandas==2.1.1
 Pillow==10.1.0
